--- a/P004279.opf/meta.yml
+++ b/P004279.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W22151
   title: ཆེད་རྩོམ་གསེར་གྱི་ཐང་མ། བོད་ལུགས་གསོ་རིག
   author: ''
-  volumes: {}
+  volumes:
+    c8f538ddfe0a46a59d425b36e466ca09:
+      image_group_id: I1PD28106
+      title: ''
+      volume_number: 1
+      total_pages: 262
