--- a/P004279.opf/layers/v001/Pagination.yml
+++ b/P004279.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9705c661937d464da1df5baf67e165f4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3559abb96e0d496683a6be3813d33ddc:
