--- a/P004279.opf/meta.yml
+++ b/P004279.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004279
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W22151
   title: ཆེད་རྩོམ་གསེར་གྱི་ཐང་མ། བོད་ལུགས་གསོ་རིག
